Stop button from stretching to width and add scoreToWin variable

--- a/style.css
+++ b/style.css
@@ -147,4 +147,7 @@ button:active {
     padding-bottom: 20px;
     position: relative;
     border-radius: 30px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
